Release Note

* 11/18/2014
  * fixed AtlasDDM for DQDatasetExistsException
  * change to avoid contention in insertFilesForDataset_JEDI

* 11/17/2014
  * changed JG to (un)set lockedTime
  * changed AtlasProdJobThr to send logging messages 
  * improved throttling in AtlasProdJobThr

* 11/14/2014
  * changed AtlasAnalJB to check core matching
  * fixed reassignTask to not use pending as oldStatus

* 11/13/2014
  * fixed setCloudToTasks_JEDI to avoid late update
  * skipping file lookup for prod merging

* 11/12/2014
  * added random and reusable to dataset attributes

* 11/11/2014
  * fixed getRW
  * removed patch

* 11/10/2014
  * changed meas_date to xrdcp_last_update

* 11/7/2014
  * fixed reassignTaskToSite 

* 11/6/2014
  * introduced respectLB and nEventsPerMergeJob

* 11/5/2014
  * fixed JG to set destinationDBlock
  * fixed AtlasProdJB to check storageToken

* 11/4/2014
  * fixed nGBPerMergeJob
  * changed for lumiBlockNr

* 10/30/2014
  * added child process check in Interaction
  * added more informative message for refine failure

* 10/29/2014
  * added ProcessWrapper
  * fixed JediDBProxy to correctly set superstatus when clouds are assigned
  * fixed insertFiles for filelist on container

* 10/28/2014
  * added memory monitor in Interaction

* 10/27/2014
  * fixed tape lookup in AtlasAnalJB
  * added timeout to join in JG
  * added meas_date limit to NN
  * changed AtlasAnalJB for AthAnalysis
  * changed to allow tape access to users
  * added t1Weight
  * fixed AtlasProdTaskPP to delete intermediate datasets

* 10/24/2014
  * added safety margin in walltime estimation

* 10/21/2014
  * fixed AtlasProdJobThrottler for composit work queues

* 10/20/2014
  * fixed JG for startEvent

* 10/15/2014
  * improved AtlasProdTR to set destination from dst:

* 10/5/2014
  * fixed AtlasProdJobBroker for pre-assigned high prio tasks  

* 10/3/2014
  * fixed JG to propagate middle-name to merged files 

* 9/26/2014